# wiktionary-sqlize

./: .gitignore  Cargo.toml
resources/: schema.sqlite
src/: main.rs  record.rs
