[package]
name = "wiktionary-sqlize"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2"
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
rust-embed = "5.5.1"
better-panic = "0.2.0"
anyhow = "1.0.31"
indicatif = "0.14.0"
rusqlite = "0.23.1"